tests/NormalTests/paczka1/small_fuzzy/86380880.err
Error in line 4: S92 S92 63,8
Error in line 6: S92 S633 13,6
Error in line 8: S92 A51 95,5
